--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@
         }
 
         .duty-option {
-            display: flex;
-            align-items: center;
+            display: block;
             padding: 16px;
             border: 2px solid #dadce0;
             border-radius: 12px;
@@ -206,6 +205,7 @@
             transition: all 0.2s ease;
             background: #fafafa;
             margin: 0;
+            position: relative;
         }
 
         .duty-option:hover {
@@ -214,9 +214,21 @@
         }
 
         .duty-option input[type="radio"] {
-            margin-right: 12px;
-            transform: scale(1.3);
-            flex-shrink: 0;
+            position: absolute;
+            left: 16px;
+            top: 50%;
+            transform: translateY(-50%);
+            margin: 0;
+            width: 20px;
+            height: 20px;
+        }
+
+        .duty-label {
+            font-size: 1.1em;
+            color: #3c4043;
+            line-height: 1.4;
+            margin-left: 40px;
+            display: block;
         }
 
         .duty-option input[type="radio"]:checked + .duty-label {
@@ -231,12 +243,6 @@
         .duty-option:has(input[type="radio"]:checked) {
             border-color: #1a73e8;
             background: #e8f0fe;
-        }
-
-        .duty-label {
-            font-size: 1.1em;
-            color: #3c4043;
-            line-height: 1.4;
         }
 
         .calculate-btn {
